--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ repositories {
 
 dependencies {
     testImplementation "io.rest-assured:rest-assured:4.1.2"
+    testImplementation "com.fasterxml.jackson.core:jackson-databind:2.11.2"
     testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
 }
